[package]
name = "btreemultimap"
version = "0.1.1"
description = "A multimap implementation with range support."
readme = "README.md"
repository = "https://github.com/john-sharratt/btree-multimap.git"
license = "MIT/Apache-2.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>", "Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
keywords = ["multimap", "btree"]
documentation = "https://docs.rs/btreemultimap/"
exclude = [
    ".travis.yml",
    ".gitignore",
]

[features]
serde_impl = ["serde"]
default = ["serde_impl"]

[dependencies]
serde = { version = "~1.0", optional = true }

[dev-dependencies]
serde_test = "~1.0"
